<?xml version="1.0"?>
<package format="2">
  <name>rpc_catkin</name>
  <version>0.0.0</version>
  <description>The rpc library packaged as a catkin package</description>
  <maintainer email="jorik.de.waen@gmail.com">Jorik De Waen</maintainer>
  <license>Closed</license>
  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
